--- a/style1.css
+++ b/style1.css
@@ -14,7 +14,7 @@ body{
     text-align: center;
 }
 h1{
-    font-size: 86px;
+    font-size: 5rem;
     font-weight: 800;
     letter-spacing: 3px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
