--- a/style2.css
+++ b/style2.css
@@ -3,9 +3,9 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(255, 255, 255);
-    color:rgb(0, 0, 0);
-    border: 5px solid rgb(0, 0, 0);
+    background-color: black;
+    color:white;
+    border: 5px solid white;
     border-radius: 50px;
     display:flex;
     align-items: center;
@@ -14,7 +14,7 @@ body{
     text-align: center;
 }
 h1{
-    font-size: 86px;
+    font-size: 5rem;
     font-weight: 800;
     letter-spacing: 3px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -39,16 +39,17 @@ button{
     font-size: 20px;
     border-radius: 20px;
     margin: 10px;
-    background-color:rgb(26, 19, 19);
-    color: white;
+    background-color:rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 button:hover{
-    color:rgb(237, 176, 157);
+    color:rgb(72, 81, 57);
     font-size: 25px;
     border: 5px solid yellow;
 }
 #theme_toggle{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
     width: 46px;
     height: 6vh;
     border-radius: 20px;
