--- a/style1.css
+++ b/style1.css
@@ -14,7 +14,7 @@ body{
     text-align: center;
 }
 h1{
-    font-size: 5rem;
+    font-size: 6rem;
     font-weight: 800;
     letter-spacing: 3px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -26,26 +26,29 @@ h1{
     letter-spacing: 2px;
 }
 .count-box{
-    width: 350px;
+    width: 400px;
     padding: 10px;
     background-color:hsla(79, 83%, 57%, 0.701);
-    font-size: 80px;
+    font-size: 88px;
     border-radius: 50px;
     margin: 0 auto 30px;
     font-weight: 700;
 
 }
+.count-box #tens{
+    font-size: 68px;
+}
 button{
-    font-size: 20px;
+    font-size: 30px;
     border-radius: 20px;
     margin: 10px;
     background-color:rgb(255, 255, 255);
     color: rgb(0, 0, 0);
 }
 button:hover{
-    color:rgb(72, 81, 57);
+    color:rgb(0, 0, 0);
     font-size: 25px;
-    border: 5px solid yellow;
+    border: 5px double yellow;
 }
 #theme_toggle{
     background-color: rgb(255, 255, 255);
@@ -63,4 +66,39 @@ button:hover{
 #theme_toggle img{
     width:40px;
     height:5vh ;
+}
+@media (max-width:450px){
+    
+        h1{
+            font-size: 4.5rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+    
+    .count-box{
+        width: 280px;
+        padding: 5px;
+        background-color:hsla(79, 83%, 57%, 0.701);
+        font-size: 50px;
+        border-radius: 50px;
+        margin: 0 auto 30px;
+        font-weight: 500;
+    
+    }
+    .count-box #tens{
+        font-size: 38px;
+    }
+    button{
+        font-size: 20px;
+        border-radius: 20px;
+        margin: 10px;
+        background-color:rgb(255, 255, 255);
+        color: rgb(0, 0, 0);
+    }
+    button:hover{
+        color:rgb(0, 0, 0);
+        font-size: 25px;
+        border: 5px double blue;
+    }
 }
